Really turn stuff off

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -28,7 +28,7 @@ defaults:
       path: ""
     values:
       layout: single
-      show_nav: false
+      show_related: false
 
 collections:
   pages:
