--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -7,6 +7,7 @@ remote_theme: mmistakes/minimal-mistakes@4.26.1
 plugins:
   - jekyll-include-cache
   - jekyll-sitemap
+  - jekyll-redirect-from
 
 locale: en_GB
 
