--- a/docs/_data/events.yml
+++ b/docs/_data/events.yml
@@ -28,3 +28,33 @@
   description: A guided walking tour celebrating Balham's literary and cultural landmarks.
   link: 
 
+- name: Speed Dating (Ages 23–35)
+  date: Thursday, 17 April 2025
+  location: The Exhibit, 12 Balham Station Road
+  description: Go on 15 mini-dates in one night at this popular speed dating event hosted by Date in a Dash.
+  link: https://dateinadash.com/events/london/balham/speed-dating/17Apr2025-6574
+
+- name: Strictly Wandsworth
+  date: Saturday, 26 April 2025
+  location: Battersea Park
+  description: A free all-day dance extravaganza featuring Bollywood, ballet, Lindy-hop, breakdancing and more.
+  link: https://www.wandsworth.gov.uk/news/news-march-2025/london-borough-of-culture-gets-moving-with-all-day-dance-extravaganza/
+
+- name: A Special Event with Fr Jacques Philippe
+  date: Saturday, 26 April 2025
+  location: Holy Ghost Church, 27 Nightingale Square, SW12 8QJ
+  description: An afternoon reflection on “God's Mercy as a Foundation of Our Hope” with renowned spiritual writer Fr Jacques Philippe.
+  link: https://www.eventbrite.com/e/a-special-event-with-fr-jacques-philippe-at-holy-ghost-church-balham-tickets-1261535961019
+
+- name: BATCA Community Awards 2025
+  date: Sunday, 27 April 2025
+  location: St Boniface Church Hall, 185 Mitcham Road, SW17 9PG
+  description: An evening celebrating the unsung heroes of the Balham and Tooting community.
+  link: https://batcaorg.wordpress.com/2025/03/01/batca-community-awards-2025/
+
+- name: Live Music at The Bedford
+  date: Various dates in April 2025
+  location: The Bedford, 77 Bedford Hill, SW12 9HD
+  description: Enjoy a rotating line-up of live music acts at one of Balham's best-loved venues.
+  link: https://thebedford.com/events/category/music/
+
