Correct a date and a link

--- a/docs/_data/events.yml
+++ b/docs/_data/events.yml
@@ -11,10 +11,10 @@
   link: https://www.lfm.org.uk/markets/balham/
 
 - name: Open Mic Night
-  date: Every Wednesday
+  date: Various dates from Thur 10 April 2025
   location: The Exhibit, 12 Balham Station Road
   description: Show off your musical or comedy skills at a friendly open mic.
-  link: https://theexhibit.co.uk/
+  link: https://www.designmynight.com/london/bars/balham/exhibit/lost-souls-poetry-open-mic
 
 - name: Art in the Park
   date: 2025-06-15
