--- a/docs/_data/events.yml
+++ b/docs/_data/events.yml
@@ -57,4 +57,7 @@
   location: The Bedford, 77 Bedford Hill, SW12 9HD
   description: Enjoy a rotating line-up of live music acts at one of Balham's best-loved venues.
   link: https://thebedford.com/events/category/music/
-
+- name: Translation
+  date: 21/22 June 2025
+  location: The Bedford, 77 Bedford Hill, SW12 9HD
+  description: An exciting and emotive piece of queer theatre blending contemporary, krump, hip hop, capoeira and acro-dance movement styles with Chinese pole.
