Add Translation to featured

--- a/docs/_data/events.yml
+++ b/docs/_data/events.yml
@@ -61,3 +61,4 @@
   date: 21/22 June 2025
   location: The Bedford, 77 Bedford Hill, SW12 9HD
   description: An exciting and emotive piece of queer theatre blending contemporary, krump, hip hop, capoeira and acro-dance movement styles with Chinese pole.
+  link: https://welcometowandsworth.com/events/do-translation/
