--- a/docs/_data/events.yml
+++ b/docs/_data/events.yml
@@ -36,3 +36,14 @@
   link: https://welcometowandsworth.com/events/do-translation/
   location: The Bedford, 77 Bedford Hill, SW12 9HD
   name: Translation
+- name: Stand-Up Comedy at The Bedford
+  date: 2025-06-21
+  location: The Bedford, 77 Bedford Hill, SW12 9HD
+  description: A Saturday night of top-tier stand-up comedy in Balham’s iconic venue, featuring up-and-coming acts and seasoned comedians.
+  link: https://thebedford.com/event/stand-up-comedy-21-june-2025/
+- name: Speed Dating (Ages 30–45)
+  date: 2025-06-27
+  location: The Exhibit, 12 Balham Station Road, SW12 9SG
+  description: A relaxed and fun way to meet up to 15 singles in one evening, hosted at The Exhibit’s stylish cocktail bar.
+  link: https://dateinadash.com/events/london/balham/speed-dating/27Jun2025
+
