Remove AI cruft

--- a/docs/_data/businesses.yml
+++ b/docs/_data/businesses.yml
@@ -134,23 +134,23 @@
   category: Café & Brunch
   address: 19 Balham High Road, SW12 9AL
   website: https://www.natas.london/
-  description: Independent coffee bar known for organic Craft House coffee, Belgian waffles, juices and a wholesome community vibe :contentReference[oaicite:1]{index=1}.
+  description: Independent coffee bar known for organic Craft House coffee, Belgian waffles, juices and a wholesome community vibe
 
 - name: Parish Coffee
   category: Café
   address: 23 Malwood Road, SW12 8EN
   website: https://www.instagram.com/parishcoffeebalham/
-  description: Community-focused café housed in Ascension Church, offering stain‑glass views, toasties, homemade cakes, and a play area for kids :contentReference[oaicite:2]{index=2}.
+  description: Community-focused café housed in Ascension Church, offering stain‑glass views, toasties, homemade cakes, and a play area for kids
 
 - name: Freak Scene Sushi & Robata
   category: Restaurant & Bar
   address: 1 Ramsden Road, SW12 8QX
   website: https://www.freakscenerestaurants.com/
-  description: Bold pan‑Asian fusion venue by ex‑Nobu chef Scott Hallsworth, offering creative sushi, robata, and inventive cocktails in an immersive environment :contentReference[oaicite:3]{index=3}.
+  description: Bold pan‑Asian fusion venue by ex‑Nobu chef Scott Hallsworth, offering creative sushi, robata, and inventive cocktails in an immersive environment
 
 - name: Blue Fig
   category: Mediterranean Restaurant
   address: 5–6 Balham Station Road, SW12 9SG
   website: https://bluefigbalham.wixsite.com/mysite/
-  description: Elegant Mediterranean fusion eatery offering breakfast, brunch, lunch and dinner with a Middle Eastern twist—book ahead recommended :contentReference[oaicite:4]{index=4}.
+  description: Elegant Mediterranean fusion eatery offering breakfast, brunch, lunch and dinner with a Middle Eastern twist—book ahead recommended
 
