--- a/docs/_data/businesses.yml
+++ b/docs/_data/businesses.yml
@@ -123,7 +123,7 @@
   - hardware
   website: https://www.balhampaintandhardware.co.uk/
 - address: 8 Hildreth Street, London SW12 9RQ
-  category: show
+  category: Shop
   description: Florist offering beautiful floral arrangements and bouquets.
   name: The Flower Sanctuary
   tags:
