--- a/docs/_data/businesses.yml
+++ b/docs/_data/businesses.yml
@@ -116,7 +116,7 @@
   - cookware
   website: https://seasoncookshop.co.uk/
 - address: 22 Bedford Hill, London SW12 9RG
-  category: Store
+  category: Shop
   description: Local DIY supplies and hardware store.
   name: Balham Paint and Hardware Company
   tags:
