--- a/docs/_data/navigation.yml
+++ b/docs/_data/navigation.yml
@@ -9,3 +9,5 @@ main:
     url: /history/
   - title: "Gateway to the South"
     url: /gateway/
+  - title: "Merch"
+    url: https://www.redbubble.com/shop/ap/171450624
